# truncated-gamma-rvs-py-package

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_truncated_gamma.py
.github/workflows/: python-package.yml
src/truncated_gamma/: __init__.py  main.py
src/truncated_gamma_rvs/: __init__.py
tests/: test_truncated_gamma_rvs.py
